--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 body
 {
-    background: rgb(0, 6, 7);
+    background: rgb(175, 230, 240);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,13 +24,13 @@ body
     margin: 50px;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    box-shadow: 0 35px 55px rgba(51, 171, 201, 0.1);
+    box-shadow: 0 35px 55px #7bdef01a;
 }
 .container .left_Side
 {
     position: relative;
-    background: #0679ad;
-    padding: 70px;
+    background: #003147;
+    padding: 50px;
 }
 .profileText
 {
@@ -101,14 +101,15 @@ body
 .contactInfo ul li .icon
 {
     display: inline-block;
-    width: 30px;
-    font-size: 18px;
+    width: 20px;
+    font-size: 20px;
     color: #03a9f4;
 }
 .contactInfo ul li span
 {
     color: #fff;
-    font-weight: 200;
+    font-weight: 300;
+    font-size: 15px;
 }
 .contactInfo.education li
 {
@@ -129,10 +130,100 @@ body
     color: #fff;
     font-weight: 50;
 }
+.contactInfo.language .percent
+{
+    position: relative;
+    width: 100%;
+    height: 6px;
+    background: #081921;
+    display: block;
+    margin-top: 5px;
 
+}
+.contactInfo.language .percent div
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #03a9f4;
+
+}
 .container .right_Side
 {
     position: relative;
     background: #fff;
     padding: 40px;
+}
+.about
+{
+    margin-bottom: 50px;
+}
+.about:last-child
+{
+    margin-bottom: 0;
+}
+.title2
+{
+    color:#003147;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+p
+{
+    color: #333;
+}
+.about .box
+{
+    display: flex;
+    flex-direction: row;
+    margin: 20px 0;
+}
+.about .box .year_company
+{
+    min-width: 150px;
+}
+.about .box .year_company h5
+{
+    text-transform: uppercase;
+    color: #848c90;
+    font-weight: 600;
+
+}
+.about .box .text h4
+{
+    text-transform: uppercase;
+    color: #2a7da2;
+    font-size: 16px;
+}
+.skills .box
+{
+    position: relative;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    justify-content: center;
+    align-items: center;
+}
+.skills .box h4
+{
+    text-transform: uppercase;
+    color: #848c99;
+    font-weight: 500;
+}
+.skills .box .percent
+{
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background: #f0f0f0;
+}
+.skills .box .percent div
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #03a9f4;
 }
